refactor: 쓰레기, 장소검색 응답구조 통일
- ResponseEntity로 반환